2012-05-09 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/config_process.php: fixed the old values for the
	$config["base_url"].
	
	* include/functions_html.php, operation/incidents/incident.php,
	operation/incidents/incident_detail.php: cleaned source code style.
	
	* include/styles/integria.css: fixed the background image for the
	class "ac_input".
	
	* operation/side_menu.php: fixed the style in the calendar.

2012-05-08 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/side_menu.php, operation/wiki/wiki.php: added a copy of
	syntax article from the Lionwiki project home.

2012-05-08 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_html.php: updated "debugPrint" from the last
	version of PandoraFMS.
	
	* include/wiki/lionwiki_lib.php: some fixes.

2012-05-07 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/side_menu.php: fixed the set vars when show the side
	menu into the wiki section. Now show again the edit link.
	
	* include/wiki/lionwiki_lib.php, operation/wiki/wiki.php: cleaned
	source code style.

2012-05-07 Miguel de Dios  <miguel.dedios@artica.es>

	* include/styles/integria.css: a lot of small fixes into the css
	code, and cleaned source code style.

2012-05-07 Miguel de Dios  <miguel.dedios@artica.es>

	* integria_demo.sql: fixed the order of querys because before the
	script tried to insert "trole" data and next "ttask" and there is a
	foreing key between this tables. And cleaned source code style.

2012-05-07 Miguel de Dios  <miguel.dedios@artica.es>

	* install.php: fixed the style of main white box in the install
	step 4 when you have any error that show a huge text.

2012-04-23  Sancho lerena <slerena@artica.es>

	* include/functions_db.php
	operation/contracts/contract_detail.php
	peration/contacts/contact_detail.php: Instead using events to audit
	the user operations, uses Audit_db.

	* general/home.php,
	godmode/setup/newsboard.php: Newsboard now are better rendered (replacing